--- a/Search_Products.html
+++ b/Search_Products.html
@@ -9,6 +9,7 @@
         display: flex;
         gap: 10px;
         flex-wrap: wrap;
+        justify-content: center;
       }
       .cardStyle {
         height: 200px;
@@ -17,7 +18,10 @@
         color: rgb(218, 39, 39);
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 50px;
+        padding: 10px;
+        align-items: center;
+        justify-content: center;
       }
       .imageStyle {
         height: 50px;
@@ -27,6 +31,7 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
+        background-color: chartreuse;
       }
       #inputSearch {
         width: 230px;
@@ -43,8 +48,8 @@
     <div id="Container"></div>
     <script>
       let parsed = [];
-
-      fetch("https://fakestoreapi.com/products")
+      // https://fakestoreapi.com/products
+      fetch("./products.json")
         .then((data) => data.json())
         .then((finalResult) => {
           parsed = finalResult;
